--- a/.github/workflows/blank.yml
+++ b/.github/workflows/blank.yml
@@ -46,9 +46,9 @@ jobs:
           # Update the script files to the latest version.
           cp -R ../../../source/dir/ target/dir/
 
-          $diff = git diff --name-only HEAD^ HEAD
-          echo $diff
-
+          diff = $(git diff --name-only HEAD^ HEAD)
+          echo "${{diff}}"
+          exit 1
           # Commit the changes and push the feature branch to origin
           git add .
           git commit -m "update proto to $LATEST_TAG"
