--- a/.github/workflows/blank.yml
+++ b/.github/workflows/blank.yml
@@ -45,9 +45,9 @@ jobs:
 
           # Update the script files to the latest version.
           cp -R ../../../source/dir/ target/dir/
-
-          DIFF=$(git diff --name-only HEAD^ HEAD)
-          echo "$DIFF"
+          pwd
+          #DIFF=$(git diff --name-only HEAD^ HEAD)
+          #echo "$DIFF"
           exit 1
           # Commit the changes and push the feature branch to origin
           git add .
