--- a/.github/workflows/blank.yml
+++ b/.github/workflows/blank.yml
@@ -45,7 +45,7 @@ jobs:
 
           # Update the script files to the latest version.
           cp -R ../../../source/dir/ target/dir/
-          ls -la
+          ls -la target/dir/
           DIFF=$(git diff --name-only)
           echo "$DIFF"
           exit 0
