--- a/.github/workflows/blank.yml
+++ b/.github/workflows/blank.yml
@@ -52,10 +52,10 @@ jobs:
         run: |
             REPOSITORY="ssh2003/target-for-sync"
             FOLDER="bin/$REPOSITORY"
-            cd $FOLDER
-            cp -Rv ../../../source/dir target/dir
-            git diff --name-only
-
+            cd $FOLDER && \
+            cp -Rv ../../../source/dir target/dir && \
+            git status && \
+            git diff --name-only && \
             exit 0
 
           # Commit the changes and push the feature branch to origin
