--- a/.github/workflows/blank.yml
+++ b/.github/workflows/blank.yml
@@ -53,7 +53,7 @@ jobs:
             REPOSITORY="ssh2003/target-for-sync"
             FOLDER="bin/$REPOSITORY"
             cd $FOLDER && \
-            cp -Rv ../../../source/dir target/dir && \
+            cp -Rv ../../../source/dir target/ && \
             git status && \
             git diff --name-only && \
             exit 0
