--- a/.github/workflows/blank.yml
+++ b/.github/workflows/blank.yml
@@ -69,3 +69,5 @@ jobs:
               --title "update scripts to $LATEST_TAG" \
               --head "$BRANCH_NAME" \
               --base "main"
+              --assignee "ssh2003"
+              -r "ssh2003"
