--- a/.github/workflows/blank.yml
+++ b/.github/workflows/blank.yml
@@ -3,7 +3,7 @@ on:
     branches:
       - main
     paths:
-      - "**.proto" 
+      - "**.proto"
     tags-ignore:
       - "**"
 
@@ -69,7 +69,7 @@ jobs:
             gh auth login --with-token < token.txt
             gh pr create \
               --body "" \
-              --title "update scripts to $LATEST_TAG" \
+              --title "update proto to $LATEST_TAG" \
               --head "$BRANCH_NAME" \
               --base "main" \
               --assignee "ssh2003" \
