--- a/.github/workflows/on-proto-update.yml
+++ b/.github/workflows/on-proto-update.yml
@@ -27,13 +27,14 @@ jobs:
           echo "REPOSITORY=ssh2003/target-for-sync" >> $GITHUB_ENV
           FOLDER="bin/$REPOSITORY"
           BRANCH_NAME="update-proto-to-$LATEST_TAG"
+          echo $REPOSITORY
 
           # Clone the remote repository and change working directory to the
           # folder it was cloned to.
           git clone \
             --depth=1 \
             --branch=main \
-            https://ssh2003:${{ secrets.GH_TOKEN }}@github.com/${{ env.REPOSITORY }} \
+            https://ssh2003:${{ secrets.GH_TOKEN }}@github.com/$REPOSITORY \
             $FOLDER
             cd $FOLDER
 
