--- a/.github/workflows/on-proto-update.yml
+++ b/.github/workflows/on-proto-update.yml
@@ -27,7 +27,8 @@ jobs:
           echo "REPOSITORY=ssh2003/target-for-sync" >> $GITHUB_ENV
           FOLDER="bin/$REPOSITORY"
           BRANCH_NAME="update-proto-to-$LATEST_TAG"
-          echo $REPOSITORY
+          echo "============================================================="
+          echo "${{ env.REPOSITORY }}"
 
           # # Clone the remote repository and change working directory to the
           # # folder it was cloned to.
