--- a/.github/workflows/on-proto-update.yml
+++ b/.github/workflows/on-proto-update.yml
@@ -8,6 +8,8 @@ on:
       - "**"
 
 name: on-commit-to-main
+env:
+  REPOSITORY=ssh2003/target-for-sync
 
 jobs:
   send-pull-requests:
@@ -24,7 +26,7 @@ jobs:
       - name: Setup env
         run: |
           echo "LATEST_TAG=$(git rev-parse --short=6 HEAD)" >> $GITHUB_ENV
-          echo "REPOSITORY=ssh2003/target-for-sync" >> $GITHUB_ENV
+          #echo "REPOSITORY=ssh2003/target-for-sync" >> $GITHUB_ENV
           FOLDER="bin/$REPOSITORY"
           BRANCH_NAME="update-proto-to-$LATEST_TAG"
           echo "============================================================="
