--- a/.github/workflows/on-proto-update.yml
+++ b/.github/workflows/on-proto-update.yml
@@ -26,13 +26,17 @@ jobs:
       - name: Setup env
         run: |
           echo "LATEST_TAG=$(git rev-parse --short=6 HEAD)" >> "$GITHUB_ENV"
-          FOLDER="bin/$REPOSITORY"
-          BRANCH_NAME="update-proto-to-$LATEST_TAG"
+          echo "FOLDER=bin/${{ env.REPOSITORY }}" >> "$GITHUB_ENV"
+      - name: Setup BRANCH_NAME
+        run: |
+          echo "BRANCH_NAME=update-proto-to-$LATEST_TAG" >> $GITHUB_ENV
       - name: use env
         run: |
           echo "============================================================="
           echo "${{ env.LATEST_TAG }}"
           echo "${{ env.REPOSITORY }}"
+          echo "${{ env.FOLDER }}"
+          echo "{{ env.BRANCH_NAME }}"
 
           # # Clone the remote repository and change working directory to the
           # # folder it was cloned to.
