--- a/.github/workflows/on-proto-update.yml
+++ b/.github/workflows/on-proto-update.yml
@@ -37,15 +37,16 @@ jobs:
           echo "${{ env.REPOSITORY }}"
           echo "${{ env.FOLDER }}"
           echo "${{ env.BRANCH_NAME }}"
-
-          # # Clone the remote repository and change working directory to the
-          # # folder it was cloned to.
-          # git clone \
-          #   --depth=1 \
-          #   --branch=main \
-          #   https://ssh2003:${{ secrets.GH_TOKEN }}@github.com/$REPOSITORY \
-          #   $FOLDER
-          #   cd $FOLDER
+      - name: clone target repo
+        run: |
+          # Clone the remote repository and change working directory to the
+          # folder it was cloned to.
+          git clone \
+            --depth=1 \
+            --branch=main \
+            https://ssh2003:${{ secrets.GH_TOKEN }}@github.com/${{ env.REPOSITORY }} \
+            $FOLDER
+          #  cd $FOLDER
           #
           #   # Setup the committers identity.
           #   git config user.email "serhii.khylyk@gmail.com"
