--- a/.github/workflows/on-proto-update.yml
+++ b/.github/workflows/on-proto-update.yml
@@ -37,6 +37,10 @@ jobs:
           echo "${{ env.REPOSITORY }}"
           echo "${{ env.FOLDER }}"
           echo "${{ env.BRANCH_NAME }}"
+      - name: setup git commiters identity
+        run: |
+          git config user.email "serhii.khylyk@gmail.com"
+          git config user.name "Serhii Khylyk"
       - name: clone target repo
         run: |
           # Clone the remote repository and change working directory to the
@@ -46,12 +50,11 @@ jobs:
             --branch=main \
             https://ssh2003:${{ secrets.GH_TOKEN }}@github.com/${{ env.REPOSITORY }} \
             $FOLDER
+
+
           #  cd $FOLDER
           #
-          #   # Setup the committers identity.
-          #   git config user.email "serhii.khylyk@gmail.com"
-          #   git config user.name "Serhii Khylyk"
-          #
+
           #   # Create a new feature branch for the changes.
           #   git checkout -b $BRANCH_NAME
           #
