--- a/.github/workflows/on-proto-update.yml
+++ b/.github/workflows/on-proto-update.yml
@@ -57,7 +57,7 @@ jobs:
           git checkout -b $BRANCH_NAME
       - name: copy all files from source repo
         run: |
-           cd $FOLDER
+           cd ${{ env.FOLDER }}
            cp -Rv ../../../source/dir/ target/
           #   git status && \
           #   DIFF=$(git status) && \
