--- a/.github/workflows/on-proto-update.yml
+++ b/.github/workflows/on-proto-update.yml
@@ -71,24 +71,24 @@ jobs:
           git add .
           git commit -m "update proto to ${{ env.LATEST_TAG }}"
           git push origin ${{ env.BRANCH_NAME }}
-        - name: Store PAT
-          if: steps.changed-files-specific.outputs.any_changed == 'true'
-          run: |
-            cd ${{ env.FOLDER }}
-            # Store the PAT in a file that can be accessed by the
-            # GitHub CLI.
-            echo "${{ secrets.GH_TOKEN }}" > token.txt
-        - name: make PR
-          if: steps.changed-files-specific.outputs.any_changed == 'true'
-          run: |
-            cd ${{ env.FOLDER }}
-            # Authorize GitHub CLI for the current repository and
-            # create a pull-requests containing the updates.
-            gh auth login --with-token < token.txt
-            gh pr create \
-              --body "" \
-              --title "update proto to ${{ env.LATEST_TAG }}" \
-              --head "$BRANCH_NAME" \
-              --base "main" \
-              --assignee "ssh2003" \
-              -r "ssh2003"
+      - name: Store PAT
+        if: steps.changed-files-specific.outputs.any_changed == 'true'
+        run: |
+          cd ${{ env.FOLDER }}
+          # Store the PAT in a file that can be accessed by the
+          # GitHub CLI.
+          echo "${{ secrets.GH_TOKEN }}" > token.txt
+      - name: make PR
+        if: steps.changed-files-specific.outputs.any_changed == 'true'
+        run: |
+          cd ${{ env.FOLDER }}
+          # Authorize GitHub CLI for the current repository and
+          # create a pull-requests containing the updates.
+          gh auth login --with-token < token.txt
+          gh pr create \
+            --body "" \
+            --title "update proto to ${{ env.LATEST_TAG }}" \
+            --head "${{ env.BRANCH_NAME }}" \
+            --base "main" \
+            --assignee "ssh2003" \
+            -r "ssh2003"
