--- a/.github/workflows/on-proto-update.yml
+++ b/.github/workflows/on-proto-update.yml
@@ -85,7 +85,7 @@ jobs:
           cd ${{ env.FOLDER }}
           # Authorize GitHub CLI for the current repository and
           # create a pull-requests containing the updates.
-          gh auth login --with-token < token.txt
+          gh auth login --with-token << ${{ env.TOKEN }}
           gh pr create \
             --body "" \
             --title "update proto to ${{ env.LATEST_TAG }}" \
