--- a/.github/workflows/on-proto-update.yml
+++ b/.github/workflows/on-proto-update.yml
@@ -79,18 +79,22 @@ jobs:
           # Store the PAT in a file that can be accessed by the
           # GitHub CLI.
           echo "${{ secrets.GH_TOKEN }}" > token.txt
+      - name: auth on github
+        if: steps.changed-files-specific.outputs.any_changed == 'true'
+        run: |
+          cd ${{ env.FOLDER }}
+        # Authorize GitHub CLI for the current repository and
+        # create a pull-requests containing the updates.
+          gh auth login
+        env:
+          GITHUB_TOKEN: ${{ secrets.GH_TOKEN }}
       - name: make PR
         if: steps.changed-files-specific.outputs.any_changed == 'true'
         run: |
           cd ${{ env.FOLDER }}
-          # Authorize GitHub CLI for the current repository and
-          # create a pull-requests containing the updates.
-          gh auth login --with-token << $GITHUB_TOKEN
           gh pr create \
             --body "" \
             --title "update proto to ${{ env.LATEST_TAG }}" \
             --head "${{ env.BRANCH_NAME }}" \
             --base "main" \
             --assignee "ssh2003"
-        env:
-          GITHUB_TOKEN: ${{ secrets.GH_TOKEN }}
