--- a/.github/workflows/on-proto-update.yml
+++ b/.github/workflows/on-proto-update.yml
@@ -10,6 +10,7 @@ on:
 name: on-commit-to-main
 env:
   REPOSITORY: "ssh2003/target-for-sync"
+  GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
 
 jobs:
   send-pull-requests:
@@ -86,8 +87,6 @@ jobs:
           # Authorize GitHub CLI for the current repository and
           # create a pull-requests containing the updates.
           gh auth login
-        env:
-          GITHUB_TOKEN: ${{ secrets.GH_TOKEN }}
       - name: make PR
         if: steps.changed-files-specific.outputs.any_changed == 'true'
         run: |
