--- a/.github/workflows/on-proto-update.yml
+++ b/.github/workflows/on-proto-update.yml
@@ -71,14 +71,16 @@ jobs:
           git add .
           git commit -m "update proto to ${{ env.LATEST_TAG }}"
           git push origin ${{ env.BRANCH_NAME }}
-      - name: make PR
-        if: steps.changed-files-specific.outputs.any_changed == 'true'
-        run: |
-          cd ${{ env.FOLDER }}
-          echo ${{ secrets.GH_TOKEN }} | gh auth login --with-token
-          gh pr create \
-            --body "" \
-            --title "update proto to ${{ env.LATEST_TAG }}" \
-            --head "${{ env.BRANCH_NAME }}" \
-            --base "main" \
-            --assignee "ssh2003"
+      - name: Create Pull Request
+        uses: peter-evans/create-pull-request@v5
+      # - name: make PR
+      #   if: steps.changed-files-specific.outputs.any_changed == 'true'
+      #   run: |
+      #     cd ${{ env.FOLDER }}
+      #     echo ${{ secrets.GH_TOKEN }} | gh auth login --with-token
+      #     gh pr create \
+      #       --body "" \
+      #       --title "update proto to ${{ env.LATEST_TAG }}" \
+      #       --head "${{ env.BRANCH_NAME }}" \
+      #       --base "main" \
+      #       --assignee "ssh2003"
