--- a/.github/workflows/on-proto-update.yml
+++ b/.github/workflows/on-proto-update.yml
@@ -72,6 +72,9 @@ jobs:
           git push origin ${{ env.BRANCH_NAME }}
       - name: Create Pull Request
         uses: peter-evans/create-pull-request@v5
+        with:
+          assignee: "ssh2003"
+          path: ${{ env.FOLDER }}
       # - name: make PR
       #   if: steps.changed-files-specific.outputs.any_changed == 'true'
       #   run: |
