move to action for checkout target repo

--- a/.github/workflows/on-proto-update.yml
+++ b/.github/workflows/on-proto-update.yml
@@ -37,14 +37,20 @@ jobs:
           echo "${{ env.FOLDER }}"
           echo "${{ env.BRANCH_NAME }}"
       - name: clone target repo
-        run: |
-          # Clone the remote repository and change working directory to the
-          # folder it was cloned to.
-          git clone \
-            --depth=1 \
-            --branch=main \
-            https://ssh2003:${{ secrets.GH_TOKEN }}@github.com/${{ env.REPOSITORY }} \
-            $FOLDER
+        uses: actions/checkout@ac593985615ec2ede58e132d2e21d2b1cbd6127c
+        with:
+          repository: ${{ env.REPOSITORY }}
+          path: ${{ env.FOLDER }}
+          
+      # - name: clone target repo
+      #   run: |
+      #     # Clone the remote repository and change working directory to the
+      #     # folder it was cloned to.
+      #     git clone \
+      #       --depth=1 \
+      #       --branch=main \
+      #       https://ssh2003:${{ secrets.GH_TOKEN }}@github.com/${{ env.REPOSITORY }} \
+      #       ${{ env.FOLDER }}
       - name: create new branch
         run: |
           cd ${{ env.FOLDER }}
@@ -70,19 +76,20 @@ jobs:
           git add .
           git commit -m "update proto to ${{ env.LATEST_TAG }}"
           git push origin ${{ env.BRANCH_NAME }}
-      - name: Create Pull Request
-        uses: peter-evans/create-pull-request@v5
-        with:
-          assignees: ssh2003
-          base: ${{ env.FOLDER }}
-      # - name: make PR
-      #   if: steps.changed-files-specific.outputs.any_changed == 'true'
-      #   run: |
-      #     cd ${{ env.FOLDER }}
-      #     echo ${{ secrets.GH_TOKEN }} | gh auth login --with-token
-      #     gh pr create \
-      #       --body "" \
-      #       --title "update proto to ${{ env.LATEST_TAG }}" \
-      #       --head "${{ env.BRANCH_NAME }}" \
-      #       --base "main" \
-      #       --assignee "ssh2003"
+      # - name: Create Pull Request
+      #   uses: peter-evans/create-pull-request@v5
+      #   with:
+      #     assignees: ssh2003
+      #     base: ${{ env.FOLDER }}
+      #     path: ${{ env.FOLDER }}
+      - name: make PR
+        if: steps.changed-files-specific.outputs.any_changed == 'true'
+        run: |
+          cd ${{ env.FOLDER }}
+          echo ${{ secrets.GH_TOKEN }} | gh auth login --with-token
+          gh pr create \
+            --body "" \
+            --title "update proto to ${{ env.LATEST_TAG }}" \
+            --head "${{ env.BRANCH_NAME }}" \
+            --base "main" \
+            --assignee "ssh2003"
