--- a/.github/workflows/on-proto-update.yml
+++ b/.github/workflows/on-proto-update.yml
@@ -51,6 +51,8 @@ jobs:
         run: |
            cd ${{ env.FOLDER }}
            cp -Rv ../../../source/dir/ target/
+      - name: check python
+        run: python -V
       - name: check if we need to commit
         id: changed-files-specific
         uses: tj-actions/changed-files@v36
