--- a/.github/workflows/on-proto-update.yml
+++ b/.github/workflows/on-proto-update.yml
@@ -3,7 +3,8 @@ on:
     branches:
       - main
     paths:
-      - '**.proto'
+      - 'source/dir/models/**.proto'
+      - 'source/dir/public/**.proto'
     tags-ignore:
       - "**"
 
@@ -53,7 +54,7 @@ jobs:
            cp -Rv ../../../source/dir/ target/
       - name: check python
         run: python -V
-        
+
       - name: check if we need to commit
         id: changed-files-specific
         uses: tj-actions/changed-files@v36
