--- a/.github/workflows/on-proto-update.yml
+++ b/.github/workflows/on-proto-update.yml
@@ -51,7 +51,8 @@ jobs:
       - name: copy all files from source repo
         run: |
            cd ${{ env.FOLDER }}
-           cp -Rv ../../../source/dir/ target/
+           cp -Rv ../../../source/dir/models/ target/models
+           cp -RV ../../../source/dir/public/ target/public
       - name: check python
         run: python -V
 
